Fixing sign up button and changing spacing to footer section

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -10,7 +10,7 @@
     &.container {
       display: flex;
       border-bottom: thin solid $border-gray;
-      padding-bottom: $size-xl;
+      padding-bottom: $size-ll;
     }
     p {
       color: $secondary-color;
